# IAP-Coding_for_Interviews

./: .gitignore  CMakeLists.txt  README.md  additionalSolutions.cc  build.sh  mySolution.cc  providedSolutions.cc  rebuild.sh  test_additionalSolutions.cc  test_mySolutions.cc  test_providedSolutions.cc
src/: additionalSolutions.cc  config.hh
src/additionalSolutions/: additional-climbingStairs.cc  additional-fibonacci.cc  additional-longestPalindromicSubstring.cc  additional-uniquePaths.cc
src/providedSolutions/: provided-climbingStairs.cc  provided-fibonacci.cc  provided-longestPalindromicSubstring.cc  provided-uniquePaths.cc
src/tests/: test_additionalSolutions.cc  test_providedSolutions.cc
